--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,8 @@
         app:layout_constraintTop_toBottomOf="@id/editTextNewUsername"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:inputType="textPassword"/>
 
     <Button
         android:id="@+id/btnRegister"
