--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.282"
-        app:srcCompat="@drawable/placeholder_image" />
+        app:srcCompat="@drawable/placeholder_image"
+        android:visibility="visible"/>
 
     <LinearLayout
         android:id="@+id/toolbar"
